# ADC_746_2ch

./: .mxproject  README.md  STM32F746G_DISCO.ioc  test.txt
Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
STM32CubeIDE/: .cproject  .project  STM32F746G_DISCO Debug.launch
STM32CubeIDE/Debug/: STM32F746G_DISCO.hex  STM32F746G_DISCO.map  makefile  objects.list  sources.mk
STM32CubeIDE/Debug/Application/User/Core/: freertos.cyclo  freertos.d  freertos.su  main.cyclo  main.d  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.d  stm32f7xx_hal_msp.su  stm32f7xx_hal_timebase_tim.cyclo  stm32f7xx_hal_timebase_tim.d  stm32f7xx_hal_timebase_tim.su  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk
STM32CubeIDE/Debug/Application/User/FATFS/App/: fatfs.cyclo  fatfs.d  fatfs.su  subdir.mk
STM32CubeIDE/Debug/Application/User/LIBJPEG/App/: libjpeg.cyclo  libjpeg.d  libjpeg.su  subdir.mk
STM32CubeIDE/Debug/Application/User/TouchGFX/App/: app_touchgfx.cyclo  app_touchgfx.d  app_touchgfx.su  subdir.mk
STM32CubeIDE/Debug/Application/User/gui/: FrontendApplication.cyclo  FrontendApplication.d  FrontendApplication.su  Model.cyclo  Model.d  Model.su  Screen1Presenter.cyclo  Screen1Presenter.d  Screen1Presenter.su  Screen1View.cyclo  Screen1View.d  Screen1View.su  subdir.mk
STM32CubeIDE/Debug/Drivers/BSP/: stm32746g_discovery.cyclo  stm32746g_discovery.d  stm32746g_discovery.su  stm32746g_discovery_qspi.cyclo  stm32746g_discovery_qspi.d  stm32746g_discovery_qspi.su  subdir.mk
STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32f7xx.cyclo  system_stm32f7xx.d  system_stm32f7xx.su
STM32CubeIDE/Debug/Drivers/Components/: ft5336.cyclo  ft5336.d  ft5336.su  subdir.mk
STM32CubeIDE/Debug/Drivers/STM32F7xx_HAL_Driver/: stm32f7xx_hal.cyclo  stm32f7xx_hal.d  stm32f7xx_hal.su  stm32f7xx_hal_adc.cyclo  stm32f7xx_hal_adc.d  stm32f7xx_hal_adc.su  stm32f7xx_hal_adc_ex.cyclo  stm32f7xx_hal_adc_ex.d  stm32f7xx_hal_adc_ex.su  stm32f7xx_hal_cortex.cyclo  stm32f7xx_hal_cortex.d  stm32f7xx_hal_cortex.su  stm32f7xx_hal_crc.cyclo  stm32f7xx_hal_crc.d  stm32f7xx_hal_crc.su  stm32f7xx_hal_crc_ex.cyclo  stm32f7xx_hal_crc_ex.d  stm32f7xx_hal_crc_ex.su  stm32f7xx_hal_dma.cyclo  stm32f7xx_hal_dma.d  stm32f7xx_hal_dma.su  stm32f7xx_hal_dma2d.cyclo  stm32f7xx_hal_dma2d.d  stm32f7xx_hal_dma2d.su  stm32f7xx_hal_dma_ex.cyclo  stm32f7xx_hal_dma_ex.d  stm32f7xx_hal_dma_ex.su  stm32f7xx_hal_dsi.d  stm32f7xx_hal_exti.cyclo  stm32f7xx_hal_exti.d  stm32f7xx_hal_exti.su  stm32f7xx_hal_flash.cyclo  stm32f7xx_hal_flash.d  stm32f7xx_hal_flash.su  stm32f7xx_hal_flash_ex.cyclo  stm32f7xx_hal_flash_ex.d  stm32f7xx_hal_flash_ex.su  stm32f7xx_hal_gpio.cyclo  stm32f7xx_hal_gpio.d  stm32f7xx_hal_gpio.su  (+56 more)
STM32CubeIDE/Debug/Middlewares/FatFs/: diskio.cyclo  diskio.d  diskio.su  ff.cyclo  ff.d  ff.su  ff_gen_drv.cyclo  ff_gen_drv.d  ff_gen_drv.su  subdir.mk  syscall.cyclo  syscall.d  syscall.su
STM32CubeIDE/Debug/Middlewares/FreeRTOS/: cmsis_os2.cyclo  cmsis_os2.d  cmsis_os2.su  croutine.d  event_groups.cyclo  event_groups.d  event_groups.su  heap_4.cyclo  heap_4.d  heap_4.su  list.cyclo  list.d  list.su  port.cyclo  port.d  port.su  queue.cyclo  queue.d  queue.su  stream_buffer.cyclo  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.cyclo  tasks.d  tasks.su  timers.cyclo  timers.d  timers.su
STM32CubeIDE/Debug/Middlewares/LibJPEG/: jaricom.d  jcapimin.cyclo  jcapimin.d  jcapimin.su  jcapistd.cyclo  jcapistd.d  jcapistd.su  jcarith.cyclo  jcarith.d  jcarith.su  jccoefct.cyclo  jccoefct.d  jccoefct.su  jccolor.cyclo  jccolor.d  jccolor.su  jcdctmgr.cyclo  jcdctmgr.d  jcdctmgr.su  jchuff.cyclo  jchuff.d  jchuff.su  jcinit.cyclo  jcinit.d  jcinit.su  jcmainct.cyclo  jcmainct.d  jcmainct.su  jcmarker.cyclo  jcmarker.d  jcmarker.su  jcmaster.cyclo  jcmaster.d  jcmaster.su  jcomapi.cyclo  jcomapi.d  jcomapi.su  jcparam.cyclo  jcparam.d  jcparam.su  (+97 more)
STM32CubeIDE/Drivers/BSP/: stm32746g_discovery.c
TouchGFX/: ADC_746_2ch.touchgfx  ApplicationTemplate.touchgfx.part  CMakeLists.txt
TouchGFX/assets/texts/: texts.xml
TouchGFX/cmake/: i686-w64-mingw32-gcc.cmake
TouchGFX/gui/include/gui/model/: Model.hpp  ModelListener.hpp
TouchGFX/gui/include/gui/screen1_screen/: Screen1Presenter.hpp  Screen1View.hpp
TouchGFX/gui/src/model/: Model.cpp
TouchGFX/gui/src/screen1_screen/: Screen1Presenter.cpp  Screen1View.cpp
TouchGFX/simulator/msvs/: Application.vcxproj.filters
